# Engram

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  test.yml
src/: audio.rs  lib.rs  main.rs  render.rs  utils.rs
src/components/: bootloader.rs  bus.rs  cartridge.rs  cpu.rs  gameboy.rs  joypad.rs  mbc.rs  memory.rs  mod.rs  ppu.rs  ram.rs  timer.rs  utils.rs
src/components/apu/: channels.rs  fir.rs  mod.rs  noise.rs  pulse.rs  sound_control.rs  wave.rs
src/components/banks/: mod.rs
src/components/cpu/: alu.rs  core.rs  cycles.rs  instructions.rs  interrupts.rs  mod.rs  opcodes.rs  registers.rs
src/components/memory/: bus.rs  memory.rs
src/components/ppu/: attributes.rs  mod.rs  palette.rs  ppu.rs  render.rs  sprites.rs  vram.rs
src/components/rom/: cartridge.rs  mbc.rs
tests/: blargg.rs  gb_tests.rs
tests/gb-test-roms/: readme.txt
tests/gb-test-roms/cgb_sound/source/: 11-regs after power.s  12-wave.s
tests/gb-test-roms/cpu_instrs/source/: 01-special.s  03-op sp,hl.s  04-op r,imm.s  05-op rp.s  07-jr,jp,call,ret,rst.s  08-misc instrs.s  09-op r,r.s  (+2 more)
tests/gb-test-roms/interrupt_time/: interrupt_time.s
tests/sm83/v2/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  0a.json  0b.json  0c.json  0d.json  0e.json  0f.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  1a.json  1b.json  1c.json  1d.json  1e.json  1f.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  (+200 more)
(+29 files in other folders)
