[package]
name = "engram"
version = "0.1.0-alpha.3"
edition = "2024"

[dependencies]
macroquad = { version = "0.4", default-features = false }
spin_sleep = "1.0"
rfd = "0.17"
chrono = "0.4"
cpal = "0.18.1"
rtrb = "0.3.4"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
opt-level = 1
